rainbow navbar background hihi

--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
   
     <!-- Carousel and its navigation-->
     <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
-      <nav class="navbar" id="transNavbar">
+      <nav class="navbar background-rainbow" id="transNavbar">
         <div class="container-fluid d-flex">
           <!-- Left aligned logo -->
          
