--- a/index.html
+++ b/index.html
@@ -366,20 +366,18 @@
     <br>
   </main>
 
-
-  <div class="index-about-bg" style="background-color: #FDB92E; color:whitesmoke;">
+  <div class="index-about-bg background-rainbow">
     <div class="row align-items-center">
       <div class="col-9">
         <a href="about.html" class="no-link-style">
-          <h2>Serving Stage Realness!</h2>
+          <h2 style="color:whitesmoke;">Serving Stage Realness!</h2>
         </a>
       </div>
       <div class="col-3 text-end">
-        <a href="blog.html" class="btn btn-light outfit-medium" style="font-size: 2vw; color:#FDB92E;">what about us</a>
+        <a href="blog.html" class="btn btn-light outfit-medium background" style="font-size: 2vw; color:black;">what about us</a>
       </div>
     </div>
-  </div>
-  <div class="index-about-bg" style="background-color: #FDB92E;">
+    <br>
     <div class="row rounded" style="background-color: whitesmoke; padding: 2%; margin-bottom: 2%; padding-top: 3%; padding-bottom: 3%;">
       <div class="col-4">
         <p class="outfit-medium">
