--- a/tickets.html
+++ b/tickets.html
@@ -138,7 +138,7 @@
 
   <!-- Carousel and its navigation-->
   <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
-    <nav class="navbar bg-black" style="padding-left: 7%; padding-right: 7%;">
+    <nav class="navbar background-rainbow" style="padding-left: 7%; padding-right: 7%;">
       <div class="container-fluid d-flex">
         <!-- Left aligned logo -->
        
