--- a/singleticket.html
+++ b/singleticket.html
@@ -152,7 +152,7 @@
   
     <!-- Carousel and its navigation-->
     <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
-      <nav class="navbar bg-black" style="padding-left: 7%; padding-right: 7%;">
+      <nav class="navbar background-rainbow" style="padding-left: 7%; padding-right: 7%;">
         <div class="container-fluid d-flex">
           <!-- Left aligned logo -->
          
@@ -270,7 +270,11 @@
 
 			  <!-- Cart Section -->
 			  <div class="cart-box">
-				<h5>🛒 Cart</h5>
+				<h5 class=" d-flex align-items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+          </svg>
+           Cart</h5>
 				<ul id="cartItems" class="list-group mb-3"></ul>
 				<strong>Total: €<span id="cartTotal">0</span></strong>
 			  </div>
