--- a/cart.html
+++ b/cart.html
@@ -10,6 +10,12 @@
   <!--stylesheet for website layout-->
   <link href="css/styles.css" rel="stylesheet">
   <!--add your own styles.css for your main's layout. Use bootstrap grids!-->
+  <style>
+    .cart-item img {
+      max-width: 100px;
+      height: auto;
+    }
+  </style>
 </head>
 
 <body>
@@ -175,38 +181,59 @@
 
 <!--main for your content and text starts here-->
   <main>
-    <div class="container">
-      <div class="row">
-        <h2>cart</h2>
-      </div>
-    </div>
-    <br>
-    <br>
-    <div class="container">
-      <div class="row gy-4 gx-4"> <!-- spacing between rows and columns -->
-        <!-- Card 1 -->
-        <div class="col-12 col-md-6 col-xl-4">
-          <div class="card h-100">
-            <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
-            <div class="card-body d-flex flex-column justify-content-between">
-              <div>
-                <h4 class="card-title">Eclipse Hearts</h4>
-                <p>3 Apr - 3 May 2025</p>
-                <p class="card-text">Bound by desire, a woman faces the distructive power of unrequited love. A Sappho inspired retelling. </p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-              </div>
-              <div class="d-flex justify-content-end">
-                <a href="cart.html" class="text-decoration-none text-reset icon-style">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
-                    <path d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
-                  </svg>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        </div>
-      </div>
+   <div class="bg-white">
+	  <div class="container py-5">
+		<h2 class="mb-4">Your Cart</h2>
+
+		<!-- Example Cart Item -->
+		<div class="card mb-4">
+		  <div class="card-body">
+			<div class="row align-items-center cart-item">
+			  <div class="col-md-2">
+				<img src="images/theatre-shows/ticket-vertical-eclipse-hearts.jpg" alt="Eclipse Heart" class="img-fluid rounded w-100 h-100 object-fit-cover" style="max-height: 400px;">
+			  </div>
+			  <div class="col-md-10">
+				<h5 class="card-title mb-1">Eclipse Heart</h5>
+				<p class="mb-1 text-muted">Date: <strong>2025-04-18</strong></p>
+				<p class="mb-1">Seat Type: <strong>Premium</strong></p>
+				<p class="mb-1">Quantity: <strong>2</strong></p>
+				<p class="mb-2">Unit Price: <strong>€25</strong></p>
+				<h6>Total: <strong>€50</strong></h6>
+				<button class="btn btn-sm btn-outline-danger mt-2">Remove</button>
+			  </div>
+			</div>
+		  </div>
+		</div>
+
+		<!-- Cart Summary -->
+		<div class="text-end">
+		  <h4 class="mb-3">Final Total: €50</h4>
+			
+		<!-- Proceed to Checkout Button -->
+		<button class="btn btn-success mt-3" data-bs-toggle="modal" data-bs-target="#redirectModal">
+		  Proceed to Checkout
+		</button>
+
+		<!-- Bootstrap Modal -->
+		<div class="modal fade" id="redirectModal" tabindex="-1" aria-labelledby="redirectModalLabel" aria-hidden="true">
+		  <div class="modal-dialog modal-dialog-centered">
+			<div class="modal-content text-center">
+			  <div class="modal-header">
+				<h5 class="modal-title" id="redirectModalLabel">Redirecting to Checkout</h5>
+			  </div>
+			  <div class="modal-body">
+				Please wait while we redirect you...
+				<div class="spinner-border text-success mt-3" role="status">
+				  <span class="visually-hidden">Loading...</span>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		</div>
+	  </div>
+
+	  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!--end container for about-->
   </main>
   <!--main for your content stops here-->
@@ -257,8 +284,15 @@
   <!--footer ends here-->
 
   <!--your script starts here-->
-  <script>
-  </script>
+  <!-- Bootstrap JavaScript (handles redirection after modal opens) -->
+	<script>
+	  const redirectModal = document.getElementById('redirectModal');
+	  redirectModal.addEventListener('shown.bs.modal', () => {
+		setTimeout(() => {
+		  window.location.href = "checkout.html"; // change to your checkout page path
+		}, 3000); // 3-second delay
+	  });
+	</script>
   <!--your script ends here-->
 
   <!--script for navigation starts here-->
