about changes one

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         </a>
       </div>
       <div class="col-3 text-end">
-        <a href="blog.html" class="btn btn-light outfit-medium background" style="font-size: 2vw; color:black;">what about us</a>
+        <a href="about.html" class="btn btn-light outfit-medium background" style="font-size: 2vw; color:black;">what about us</a>
       </div>
     </div>
     <br>
