find tickets button

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           </a>
         </div>
         <div class="col-4 text-end">
-          <a href="tickets.html" class="btn btn-dark outfit-medium" style="font-size: 2vw;">browse-like-compare</a>
+          <a href="tickets.html" class="btn btn-dark outfit-medium" style="font-size: 2vw;">More Shows</a>
         </div>
       </div>
       <br>
@@ -256,16 +256,23 @@
                 </p>
                 <p class="card-text card-text-white"><small>Last updated 3 mins ago</small></p>
               </div>
-              <!---pop-up login heart-->
-              <div class="d-flex justify-content-end" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                role="button" style="z-index: 2;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart"
-                  viewBox="0 0 16 16">
-                  <path
-                    d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
-                </svg>
+              <!-- Flex container with space between icons -->
+              <div class="d-flex justify-content-between align-items-center" style="z-index: 2;">
+                <!-- Cart icon -->
+                <div data-bs-toggle="modal" data-bs-target="#exampleModal" role="button">
+                  <a href="singleticket.html" class="btn btn-light outfit-medium" style="color: #B93D22;">Find Tickets</a>
+                </div>
+
+                <!-- Heart icon -->
+                <div data-bs-toggle="modal" data-bs-target="#exampleModal" role="button">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart"
+                    viewBox="0 0 16 16">
+                    <path
+                      d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                  </svg>
+                </div>
               </div>
-              <!---end pop-up login heart-->
+
             </div>
           </div>
         </div>
@@ -282,18 +289,26 @@
                 <h4 class="card-title">Romeo and Romeo</h4>
                 <p>6 May - 6 June 2025</p>
                 <p class="card-text">
-                  Romeo and Romeo follows two young men torn between love and family loyalty in a world divided by
-                  conflict. Their journey challenges the boundaries of tradition and the power of forbidden love.
+                  Romeo and Romeo follows two young men torn between love and loyalty in a world divided by conflict.
                 </p>
                 <p class="card-text card-text-white"><small>Last updated 3 mins ago</small></p>
+                <br>
               </div>
-              <div class="d-flex justify-content-end" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                role="button" style="z-index: 2;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart"
-                  viewBox="0 0 16 16">
-                  <path
-                    d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
-                </svg>
+              <!-- Flex container with space between icons -->
+              <div class="d-flex justify-content-between align-items-center" style="z-index: 2;">
+                <!-- Cart icon -->
+                <div data-bs-toggle="modal" data-bs-target="#exampleModal" role="button">
+                  <a href="singleticket.html" class="btn btn-light outfit-medium" style="color: #B3298D;">Find Tickets</a>
+                </div>
+
+                <!-- Heart icon -->
+                <div data-bs-toggle="modal" data-bs-target="#exampleModal" role="button">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart"
+                    viewBox="0 0 16 16">
+                    <path
+                      d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                  </svg>
+                </div>
               </div>
             </div>
           </div>
@@ -310,17 +325,25 @@
               <div>
                 <h4 class="card-title">Moonlight Call</h4>
                 <p>10 June - 10 July 2025</p>
-                <p class="card-text">Moonlight Call follows three individuals bound by fate as they journey through a
-                  world where emotions take shape, unlocking the power of untold visions along the way.</p>
+                <p class="card-text">Moonlight Call follows three fated souls through a world shaped by emotion and awakening visions.</p>
                 <p class="card-text card-text-white"><small>Last updated 3 mins ago</small></p>
+                <br>
               </div>
-              <div class="d-flex justify-content-end" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                role="button" style="z-index: 2;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart"
-                  viewBox="0 0 16 16">
-                  <path
-                    d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
-                </svg>
+              <!-- Flex container with space between icons -->
+              <div class="d-flex justify-content-between align-items-center" style="z-index: 2;">
+                <!-- Cart icon -->
+                <div data-bs-toggle="modal" data-bs-target="#exampleModal" role="button">
+                  <a href="singleticket.html" class="btn btn-light outfit-medium" style="color: #740318;">Find Tickets</a>
+                </div>
+
+                <!-- Heart icon -->
+                <div data-bs-toggle="modal" data-bs-target="#exampleModal" role="button">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart"
+                    viewBox="0 0 16 16">
+                    <path
+                      d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                  </svg>
+                </div>
               </div>
             </div>
           </div>
@@ -374,11 +397,13 @@
         </a>
       </div>
       <div class="col-3 text-end">
-        <a href="about.html" class="btn btn-light outfit-medium background" style="font-size: 2vw; color:black;">what about us</a>
+        <a href="about.html" class="btn btn-light outfit-medium background" style="font-size: 2vw; color:black;">what
+          about us</a>
       </div>
     </div>
     <br>
-    <div class="row rounded" style="background-color: whitesmoke; padding: 2%; margin-bottom: 2%; padding-top: 3%; padding-bottom: 3%;">
+    <div class="row rounded"
+      style="background-color: whitesmoke; padding: 2%; margin-bottom: 2%; padding-top: 3%; padding-bottom: 3%;">
       <div class="col-4">
         <p class="outfit-medium">
           Welcome to your new favourite queer theatre world website!
@@ -422,8 +447,8 @@
       </div>
       <div class="col-6">
         <p class="text-center">
-          Get access to <strong>Premium Articles</strong> and get <strong>10% Off</strong> All Theatre Tickets!          
-                 For just 2.99 euros!
+          Get access to <strong>Premium Articles</strong> and get <strong>10% Off</strong> All Theatre Tickets!
+          For just 2.99 euros!
         </p>
         <div class="text-center">
           <a href="profile.html" class="btn btn-light outfit-medium" style="font-size: 2vw; color:#5F2A88;">
