navbar and search icon gone for small screens

--- a/about.html
+++ b/about.html
@@ -25,7 +25,9 @@
       <!-- Left aligned logo -->
 
       <div class="d-flex justify-content-start">
+        <a href="index.html" class="no-link-style">
         <img src="images/onc_notext.svg" alt="Brand Logo" style="height: 30px;">
+        </a>
       </div>
 
       <a href="index.html" class="navbar-brand outfit-semibold icon-style mx-auto"
@@ -78,9 +80,7 @@
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasScrollNavbar"
           aria-labelledby="offcanvasScrollNavbarLabel">
           <div class="offcanvas-header">
-            <a href="index.html" class="offcanvas-title outfit-medium no-link-style" id="offcanvasScrollNavbarLabel">
-              <h4>menu</h4>
-            </a>
+            <h4>menu</h4>
             <button type="button" class="btn-close side-x-margin close-button" data-bs-dismiss="offcanvas"></button>
           </div>
           <div class="offcanvas-body">
@@ -110,10 +110,10 @@
                 </button>
               </li>
               <hr>
-              <li class="nav-item"><a class="nav-link" href="tickets.html">tickets</a></li>
-              <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
-              <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
-              <li class="nav-item"><a class="nav-link" href="corporate.html">corporate</a></li>
+              <li class="nav-item"><a class="nav-link" href="tickets.html">Tickets</a></li>
+              <li class="nav-item"><a class="nav-link" href="blog.html">Spotlight</a></li>
+              <li class="nav-item"><a class="nav-link" href="about.html">Who Are We</a></li>
+              <li class="nav-item"><a class="nav-link" href="corporate.html">Corporate</a></li>
               <br>
               <li>
                 <form class="d-flex" role="search">
@@ -137,7 +137,9 @@
         <!-- Left aligned logo -->
 
         <div class="d-flex justify-content-start">
+          <a href="index.html" class="no-link-style">
           <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 30px;">
+          </a>
         </div>
 
         <a href="index.html" class="navbar-brand outfit-semibold icon-style icon-white mx-auto"
@@ -296,8 +298,8 @@
                   <div class="row g-0 h-100 d-flex">
                     <!-- Image column -->
                     <div class="col-5">
-                      <img src="images/tickets-images/eclipse-hearts-without-text.jpg"
-                        class="img-fluid h-100 w-100 object-fit-cover" alt="eclipse-hearts-photo"
+                      <img src="images/tickets-images/romeo-and-romeo-without-text.jpg"
+                        class="img-fluid h-100 w-100 object-fit-cover" alt="romeo-romeo-photo"
                         style="border-radius: 5px 0 0 5px;">
                     </div>
       
@@ -305,12 +307,13 @@
                     <div class="col-7">
                       <div class="card-body d-flex flex-column justify-content-between h-100" style="padding: 15px;">
                         <div>
-                          <h5 class="card-title mb-1">Eclipse Hearts</h5>
+                          <h5 class="card-title mb-1">Romeo and Romeo</h5>
                           <p class="mb-1"><small>3 Apr - 3 May 2025</small></p>
                           <p class="card-text small">
-                            A Sappho-inspired retelling of a writer's descent into obsession and heartache.
+                            Two young men torn between love and family loyalty in a
+                  world divided by conflict.
                           </p>
-                          <p class="card-text"><small class="text-body-secondary">Duration: 1h 45m</small></p>
+                          <p class="card-text"><small class="text-body-secondary">Duration: 1h 30m</small></p>
                         </div>
                         <div class="d-flex justify-content-end" data-bs-toggle="modal" data-bs-target="#exampleModal"
                           role="button">
@@ -409,12 +412,6 @@
       <br>
     </div>
   </div>
-
-
-  <!--End of fourth container for Meet the team-->
-  <!--End of container for Meet the team-->
-
-  <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
 
   <!--main for your content stops here-->
 
