--- a/corporate.html
+++ b/corporate.html
@@ -95,7 +95,9 @@
       <!-- Left aligned logo -->
      
       <div class="d-flex justify-content-start">
+				<a href="index.html" class="no-link-style">
         <img src="images/onc_notext.svg" alt="Brand Logo" style="height: 30px;">
+				</a>
       </div>
 
       <a href="index.html"
@@ -144,7 +146,7 @@
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasScrollNavbar"
         aria-labelledby="offcanvasScrollNavbarLabel">
         <div class="offcanvas-header">
-          <a href="index.html" class="offcanvas-title outfit-medium no-link-style" id="offcanvasScrollNavbarLabel"><h4>menu</h4></a>
+          <h4>menu</h4>
           <button type="button" class="btn-close side-x-margin close-button" data-bs-dismiss="offcanvas"></button>
         </div>
         <div class="offcanvas-body">
@@ -172,10 +174,10 @@
               </button>
             </li>
             <hr>
-            <li class="nav-item"><a class="nav-link" href="tickets.html">tickets</a></li>
-            <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
-            <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
-            <li class="nav-item"><a class="nav-link" href="corporate.html">corporate</a></li>
+            <li class="nav-item"><a class="nav-link" href="tickets.html">Tickets</a></li>
+            <li class="nav-item"><a class="nav-link" href="blog.html">Spotlight</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">Who Are We</a></li>
+            <li class="nav-item"><a class="nav-link" href="corporate.html">Corporate</a></li>
             <br>
             <li>
               <form class="d-flex" role="search">
@@ -199,7 +201,9 @@
         <!-- Left aligned logo -->
        
         <div class="d-flex justify-content-start">
+					<a href="index.html" class="no-link-style">
           <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 30px;">
+					</a>
         </div>
   
         <a href="index.html"
