--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,9 @@
       <!-- Left aligned logo -->
 
       <div class="d-flex justify-content-start">
+				<a href="index.html" class="no-link-style">
         <img src="images/onc_notext.svg" alt="Brand Logo" style="height: 30px;">
+				</a>
       </div>
 
       <a href="index.html" class="navbar-brand outfit-semibold icon-style mx-auto"
@@ -73,9 +75,7 @@
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasScrollNavbar"
           aria-labelledby="offcanvasScrollNavbarLabel">
           <div class="offcanvas-header">
-            <a href="index.html" class="offcanvas-title outfit-medium no-link-style" id="offcanvasScrollNavbarLabel">
-              <h4>menu</h4>
-            </a>
+            <h4>menu</h4>
             <button type="button" class="btn-close side-x-margin close-button" data-bs-dismiss="offcanvas"></button>
           </div>
           <div class="offcanvas-body">
@@ -105,10 +105,10 @@
                 </button>
               </li>
               <hr>
-              <li class="nav-item"><a class="nav-link" href="tickets.html">tickets</a></li>
-              <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
-              <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
-              <li class="nav-item"><a class="nav-link" href="corporate.html">corporate</a></li>
+              <li class="nav-item"><a class="nav-link" href="tickets.html">Tickets</a></li>
+              <li class="nav-item"><a class="nav-link" href="blog.html">Spotlight</a></li>
+              <li class="nav-item"><a class="nav-link" href="about.html">Who Are We</a></li>
+              <li class="nav-item"><a class="nav-link" href="corporate.html">Corporate</a></li>
               <br>
               <li>
                 <form class="d-flex" role="search">
@@ -127,12 +127,14 @@
 
   <!-- Carousel and its navigation-->
   <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
-    <nav class="navbar background-rainbow" style="padding-left: 7%; padding-right: 7%;">
+    <nav class="navbar" id="transNavbar">
       <div class="container-fluid d-flex">
         <!-- Left aligned logo -->
 
         <div class="d-flex justify-content-start">
+					<a href="index.html" class="no-link-style">
           <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 30px;">
+					</a>
         </div>
 
         <a href="index.html" class="navbar-brand outfit-semibold icon-style icon-white mx-auto"
@@ -183,6 +185,49 @@
           </button>
         </div>
     </nav>
+
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="10000">
+        <div class="index-about-bg background-rainbow" style="color: whitesmoke; padding-bottom: 2px !important; padding-top: 46px !important;">
+          <div class="row">
+            <div class="col-12 text-center">
+              <div class="scroll-wrapper">
+                <div class="scroll-content">
+                  <div class="scroll-text">
+                    <a href="profile.html" class="no-link-style">
+                    <i>
+                    <span>
+                      <strong>Subscribe!</strong> Get <strong>Premium Articles</strong> & <strong>10% Off</strong> All Theatre Tickets!
+                      For just <strong>2.99</strong> euros! &nbsp;&nbsp;&nbsp;
+                    </span>
+                    <span>
+                      <strong>Subscribe!</strong> Get <strong>Premium Articles</strong> & <strong>10% Off</strong> All Theatre Tickets!
+                      For just <strong>2.99</strong> euros! &nbsp;&nbsp;&nbsp;
+                    </span>
+                    <span>
+                      <strong>Subscribe!</strong> Get <strong>Premium Articles</strong> & <strong>10% Off</strong> All Theatre Tickets!
+                      For just <strong>2.99</strong> euros! &nbsp;&nbsp;&nbsp;
+                    </span>
+                    <span>
+                      <strong>Subscribe!</strong> Get <strong>Premium Articles</strong> & <strong>10% Off</strong> All Theatre Tickets!
+                      For just <strong>2.99</strong> euros! &nbsp;&nbsp;&nbsp;
+                    </span>
+                    <span>
+                      <strong>Subscribe!</strong> Get <strong>Premium Articles</strong> & <strong>10% Off</strong> All Theatre Tickets!
+                      For just <strong>2.99</strong> euros! &nbsp;&nbsp;&nbsp;
+                    </span>
+                  </i>
+                  </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
   </div>
   <!--end of navigations-->
 
