no link style for phone buttons

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
         </div>
         <button class="icon-style">
-          <a href="cart.html" class="text-decoration-none text-reset">
+          <a href="cart.html" class="text-decoration-none text-reset no-link-style">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart"
               viewBox="0 0 16 16">
               <path
@@ -99,7 +99,7 @@
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ms-auto">
               <li>
                 <button class="icon-style" style="padding-bottom: 18px;">
-                  <a href="profile.html" class="text-decoration-none text-reset">
+                  <a href="profile.html" class="text-decoration-none text-reset no-link-style">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                       class="bi bi-person-circle" viewBox="0 0 16 16">
                       <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
@@ -112,7 +112,7 @@
               </li>
               <li>
                 <button class="icon-style" style="padding-bottom: 15px;">
-                  <a href="cart.html" class="text-decoration-none text-reset">
+                  <a href="cart.html" class="text-decoration-none text-reset no-link-style">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                       class="bi bi-cart" viewBox="0 0 16 16">
                       <path
@@ -553,7 +553,7 @@
           <h5>Contact</h5>
           <p><a href="mailto:outncenter@gmail.com"
               style="text-decoration: none;  color: white;">outncenter@gmail.com</a></p>
-          <p>Phone: +31 6 20 87 45 1</p>
+          <p class="no-link-style">Phone: +31 6 20 87 45 1</p>
           <p>Address: 12 Grote Markt, Breda</p>
         </div>
 
